# badiff-cpp

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  LICENSE.txt  Makefile  README.md  opt.txt
badiff_c/: CMakeLists.txt
badiff_c/include/badiff/: op.h  opq.h
badiff_c/src/: op.c  op_q.c
include/badiff/: badiff.hpp  bytes.hpp  defaults.hpp  diff.hpp  minimal.hpp  op.hpp
include/badiff/alg/: edit_graph.hpp  graph.hpp  inertial_graph.hpp
include/badiff/io/: serialized.hpp
include/badiff/q/: cdc_op_queue.hpp  chunking_op_queue.hpp  coalescing_op_queue.hpp  compacting_op_queue.hpp  deserialize_op_queue.hpp  filter_op_queue.hpp  graph_op_queue.hpp  minimize_op_queue.hpp  op_queue.hpp  replace_op_queue.hpp  rewinding_op_queue.hpp  rop_queue.hpp  rreplace_op_queue.hpp  rstream_replace_op_queue.hpp  stream_replace_op_queue.hpp  vector_op_queue.hpp
main/: badiff_main.cpp  minimal_main.cpp
man/: badiff.1
src/: badiff.cpp  diff.cpp  minimal.cpp  op.cpp
src/alg/: edit_graph.cpp  inertial_graph.cpp
src/q/: cdc_op_queue.cpp  chunking_op_queue.cpp  coalescing_op_queue.cpp  compacting_op_queue.cpp  deserialize_op_queue.cpp  filter_op_queue.cpp  graph_op_queue.cpp  minimize_op_queue.cpp  op_queue.cpp  replace_op_queue.cpp  rewinding_op_queue.cpp  rop_queue.cpp  rreplace_op_queue.cpp  rstream_replace_op_queue.cpp  stream_replace_op_queue.cpp  vector_op_queue.cpp
test/: .cproject  .project  CMakeLists.txt  Makefile
test/contrib/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-function-mocker.h  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-nice-strict.h  gmock-spec-builders.h  gmock.h
test/contrib/include/gmock/internal/: gmock-internal-utils.h  gmock-port.h
test/contrib/include/gtest/: gtest-assertion-result.h  gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h
test/contrib/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h
test/contrib/src/gmock/: gmock-all.cc  gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
test/contrib/src/gtest/: gtest-assertion-result.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-matchers.cc  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc
test/src/: badiff_test.cpp  fn_patch_test.cpp  minimal_test.cpp  op_test.cpp
test/src/alg/: edit_graph_test.cpp  inertial_graph_test.cpp
test/src/c/: diff_patch_test.cpp
test/src/q/: coalescing_op_queue_test.cpp  graph_op_queue_test.cpp  minimize_op_queue_test.cpp  op_queue_test.cpp  replace_op_queue_test.cpp  rewinding_op_queue_test.cpp  rop_queue_test.cpp  rreplace_op_queue_test.cpp  rstream_replace_op_queue_test.cpp  stream_replace_op_queue_test.cpp
